RESOLVED FIXED 280411
[LFC][Integration] layoutWithFormattingContextForBox should not be limited to inline content
https://bugs.webkit.org/show_bug.cgi?id=280411
Summary [LFC][Integration] layoutWithFormattingContextForBox should not be limited to...
zalan
Reported 2024-09-26 08:45:40 PDT
ssia
Attachments
[fast-cq]Patch (1.58 KB, patch)
2024-09-26 08:48 PDT, zalan
no flags
zalan
Comment 1 2024-09-26 08:48:20 PDT
Created attachment 472692 [details] [fast-cq]Patch
EWS
Comment 2 2024-09-26 15:29:27 PDT
Committed 284321@main (657ca5b46bed): <https://commits.webkit.org/284321@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472692 [details].
Radar WebKit Bug Importer
Comment 3 2024-09-26 15:30:17 PDT
Note You need to log in before you can comment on or make changes to this bug.