[LFC][Integration] layoutWithFormattingContextForBox should not be limited to inline content https://bugs.webkit.org/show_bug.cgi?id=280411

Reviewed by Antti Koivisto.

When FFC calls back to the render tree for layout, the formatting context root container is a flex box.

* Source/WebCore/layout/integration/LayoutIntegrationFormattingContextLayout.cpp:
(WebCore::LayoutIntegration::layoutWithFormattingContextForBox): Let's bail out on the enclosing formatting context root.

Canonical link: https://commits.webkit.org/284321@main